Fix button-input alignment

--- a/checkout-page/main.css
+++ b/checkout-page/main.css
@@ -122,7 +122,7 @@ button {
     font-size: 1rem;
     color: #333333;
     text-align: center;
-    /* padding: 0 0 0 10%;    */
+    padding: 0 0 0 10%;   
 }
 
 button:hover svg{
